--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,7 @@ ul {
   position: absolute;
   left: 1110px;
   top: 125px;
-  width: 70px;
-  height: 70px;
+  width: 5%;
 }
 
 .server-name {
@@ -36,8 +35,7 @@ ul {
 .navbar {
   font-family: 'Roboto Slab', serif;
   background-color: #ff414d;
-  width: auto;
-  padding: 5px;
+  padding: 0.2%;
 }
 
 .navbar-li {
@@ -66,8 +64,8 @@ ul {
     position: absolute;
     top: 270px;
     background-color: #f1f3f8;
-    width: 1903px;
-    height: 800px;
+    width: 100%;
+    height: 80%;
 }
 
 .information {
@@ -182,8 +180,7 @@ ul {
   color: white;
   background-color: #8d93ab;
   margin-top: 1200px;
-  height: 80px;
-  width: auto;
+  height: 70px;
 }
 
 .footer-p {
@@ -199,8 +196,8 @@ ul {
   position: absolute;
   top: 270px;
   background-color: #f1f3f8;
-  width: 1903px;
-  height: 400px;
+  width: 100%;
+  height: 30%;
 }
 
 .registration-form {
@@ -250,7 +247,7 @@ ul {
   color: white;
   background-color: #8d93ab;
   margin-top: 858px;
-  height: 80px;
+  height: 70px;
 }
 
 .register-footer-p {
